syntax = "proto3";

package user;

option go_package = "github.com/imimran/go-grpc-auth/pb";


message User {
  int64 id = 1;
  string email = 2;
  string password = 3; // stored hashed
  string full_name = 4;
}

message UserId {
  int64 id = 1;
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  string full_name = 3;
}

message UpdateUserRequest {
  int64 id = 1;
  string email = 2;
  string password = 3;
  string full_name = 4;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message Empty {}

message UserListResponse {
  repeated User users = 1;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (User);
  rpc GetUser(UserId) returns (User);
  rpc UpdateUser(UpdateUserRequest) returns (User);
  rpc DeleteUser(UserId) returns (Empty);
  rpc ListUsers(Empty) returns (UserListResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}
